--- a/resources/sass/admin/accounts/edit.scss
+++ b/resources/sass/admin/accounts/edit.scss
@@ -1,4 +1,4 @@
-#user-edit,#page-edit{
+#user-edit,#page-edit,#team-create,#team-edit,#company-create,#company-edit{
     .form-sub-group{
         display: inline-block;
     }
