--- a/resources/sass/main.scss
+++ b/resources/sass/main.scss
@@ -160,6 +160,10 @@ ul>p{
     background-color: $green_1;
     color: white !important;
 }
+.bg-green-3{
+    background-color: $green_3;
+    color: white !important;
+}
 .bg-gray{
     background-color: $gray_2;
 }
@@ -998,7 +1002,7 @@ select option[value=""]{
             position: absolute;
             width: 50%;
             height: 30px;
-            color: $green_2;
+            color: $light_black;
             font-size: 15px;
             font-weight: bold;
             text-align: center;
@@ -1473,7 +1477,7 @@ select option[value=""]{
 }
 
 .dd-cropper{
-    min-height: 520px;
+    min-height: 200px;
     height: auto;
     img,embed,iframe{
         border-radius: 0px;
@@ -1555,7 +1559,6 @@ select option[value=""]{
         max-width: 100%;
         max-height: 100%;
         min-width: 250px;
-        //min-height: 250px;
     }
 
     .croppr {
