--- a/resources/sass/admin/chats/index.scss
+++ b/resources/sass/admin/chats/index.scss
@@ -1,15 +1,19 @@
 #chat-index{
-    height: calc(100vh - 220px);
+    height: 100%;
+    .chat-section{
+        height: calc(100vh - 200px);
+    }
     .chat-cont{
         //min-height: 93%;
         height: 100%;
         background-color: $blue_1;
         border-radius: 20px;
         margin-top: 10px;
-        padding: 10px;
+        padding: 10px 0px;
+        overflow-x: hidden;
         .account{
-            border-bottom: 2px solid $gray_1;
-            padding: 10px 0;
+            border-bottom: 2px solid $blue_2;
+            padding-top: 10px;
             .notread{
               width: 10px;
               height: 10px;
@@ -18,10 +22,9 @@
               background-color: $green_3;
             }
             .chat-item{
-                padding: 10px 20px;
-                margin-bottom: 7px;
+                padding: 15px;
                 color: black;
-                font-size: 17px;
+                font-size: 13px;
                 position: relative;
                 display: inline-block;
                 width: 100%;
