--- a/resources/sass/main.scss
+++ b/resources/sass/main.scss
@@ -153,16 +153,16 @@ ul>p{
 }
 .bg-blue{
     background-color: $blue_1;
-    color: white !important;
+    color: white;
 }
 
 .bg-green{
     background-color: $green_1;
-    color: white !important;
+    color: white;
 }
 .bg-green-3{
     background-color: $green_3;
-    color: white !important;
+    color: white;
 }
 .bg-gray{
     background-color: $gray_2;
@@ -309,14 +309,47 @@ ul>p{
     }
 }
 
-.input{
-    height: 30px;
-    border-radius: 10px;
-    border: 2px solid gray;
-    background-color: $hover_gray;
-}
+
 
 //CUSTOM INPUT
+.custom-input-blue{
+    border: 2px solid $blue_3;
+    border-radius: 15px;
+    font-size: 14px;
+    background-color: $blue_1;
+}
+
+.custom-input-green{
+    border: 2px solid $green_3;
+    border-radius: 15px;
+    font-size: 14px;
+    background-color: $green_1;
+}
+
+.custom-select-blue{
+    border: 2px solid $blue_3;
+    border-radius: 15px;
+    font-size: 14px;
+    background-color: $blue_1;
+}
+
+.custom-select-green{
+    border: 2px solid $green_3;
+    border-radius: 15px;
+    font-size: 14px;
+    background-color: $green_1;
+}
+
+select,
+select option {
+  color: #000000;
+}
+
+select:invalid,
+select option[value=""]{
+  color: #999999;
+}
+
 .input-container {
   display: block;
   position: relative;
@@ -449,30 +482,6 @@ ul>p{
     }
 }
 
-.custom-select-blue{
-    border: 2px solid $blue_3;
-    border-radius: 15px;
-    font-size: 14px;
-    background-color: $blue_1;
-}
-
-.custom-select-green{
-    border: 2px solid $green_3;
-    border-radius: 15px;
-    font-size: 14px;
-    background-color: $green_1;
-}
-
-select,
-select option {
-  color: #000000;
-}
-
-select:invalid,
-select option[value=""]{
-  color: #999999;
-}
-
 /*Added for browser compatibility*/
 [hidden] {
   display: none;
@@ -528,8 +537,8 @@ select option[value=""]{
     height: 100px;
 }
 .big-img{
-    width: 150px;
-    height: 150px;
+    width: 140px;
+    height: 140px;
 }
 .max-img{
     width: 300px;
@@ -555,19 +564,19 @@ select option[value=""]{
 }
 
 .txt-green{
-    color:$green_3;
+    color:$green_3 !important;
 }
 
 .txt-blue{
-    color: $blue_3;
+    color: $blue_3 !important;
 }
 
 .txt-orange{
-    color: $orange;
+    color: $orange !important;
 }
 
 .txt-red{
-    color: $red;
+    color: $red !important;
 }
 
 //BUTTON
@@ -1185,12 +1194,13 @@ select option[value=""]{
     &::-webkit-scrollbar-track{//binario
         -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
         //border-radius: 10px;
-        background-color: $default_green_deactivate;
+        background-color: $green_1;
+        border-radius: 10px;
     }
     &::-webkit-scrollbar-thumb{//cursore
         border-radius: 10px;
         -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
-        background-color:  $default_green_deactivate;
+        background-color:  $green_2;
     }
 }
 
@@ -1790,6 +1800,14 @@ select option[value=""]{
     width: 20px;
     height: 20px;
     object-fit: contain;
+}
+
+.legal-background{
+  background: $blue_3;
+  background: radial-gradient(circle, $blue_3 0%, $green_3 33%, $blue_3 66%, $green_3 100%);
+  h6{
+    color:white;
+  }
 }
 
 .raccomanded-service{
