--- a/resources/sass/admin/accounts/index.scss
+++ b/resources/sass/admin/accounts/index.scss
@@ -351,7 +351,7 @@
             &:hover{
                 transition: 0.4s;
                 background-color: white;
-                color: $green_3;
+                color: $dark_2;
             }
         }
     }
