--- a/public/css/app.css
+++ b/public/css/app.css
@@ -17125,7 +17125,7 @@ button {
   padding: 0;
   background-color: transparent;
   border: none;
-  color: rgb(10, 184, 159);
+  color: #01B59C;
 }
 
 [aria-label][role~=tooltip] {
@@ -17153,14 +17153,16 @@ button {
 }
 
 [aria-label][role~=tooltip]::after {
-  background: rgba(10, 184, 159, 0.9);
+  /* background: rgba(10,184,159,0.9); */
+  background: #00A1DC;
+  background: linear-gradient(180deg, #00A1DC 0%, #01B59C 100%);
   border-radius: 4px;
   color: #ffffff;
   content: attr(aria-label);
   font-size: var(--microtip-font-size, 13px);
   font-weight: var(--microtip-font-weight, normal);
   text-transform: var(--microtip-text-transform, none);
-  background-color: rgba(10, 184, 159, 0.9);
+  background-color: #01B59C;
   padding: 0.5em 1em;
   white-space: nowrap;
   box-sizing: content-box;
@@ -17188,7 +17190,7 @@ button {
   height: 0;
   border-left: 10px solid transparent;
   border-right: 10px solid transparent;
-  border-top: 12px solid rgba(10, 184, 159, 0.9);
+  border-top: 12px solid #01B59C;
 }
 
 [role~=tooltip][data-microtip-position|=top]::after {
@@ -17413,7 +17415,7 @@ body .d-alert {
   top: 0px;
   left: 0px;
   background-color: rgba(1, 1, 1, 0.5);
-  z-index: 5;
+  z-index: 7;
   left: 0px;
 }
 
@@ -17426,12 +17428,39 @@ body .d-alert .alert-item {
   overflow-y: auto;
 }
 
-body .d-alert .alert-item .item-style {
+body .d-alert .alert-item .item-style-visible {
+  padding: 30px;
+  background-color: white;
+  border-radius: 20px;
+}
+
+body .d-alert .alert-item .item-style-visible button {
+  margin-top: 20px;
+  margin-right: 15px;
+}
+
+body .d-alert .alert-item .item-style-visible h6 {
+  color: #00A1DC;
+  margin-bottom: 15px;
+}
+
+body .d-alert .alert-item .item-style-visible a {
   display: flex;
-  flex-direction: column;
-  justify-content: space-around;
   align-items: center;
-  padding-top: 40px;
+  color: black;
+  font-weight: bold;
+  border-radius: 10px;
+  text-transform: capitalize;
+  padding: 3px 5px;
+}
+
+body .d-alert .alert-item .item-style-visible a:hover {
+  text-decoration: none;
+  background-color: #E5F5FC;
+}
+
+body .d-alert .alert-item .item-style-visible a img {
+  padding-right: 5px;
 }
 
 body .deactive-alert {
@@ -17536,10 +17565,9 @@ ul > p {
   left: 0;
   text-align: center;
   width: 100%;
-  background-color: #031b4e;
+  background-color: #CDD8D6;
   z-index: 5;
-  color: white;
-  opacity: 0.9;
+  color: black;
 }
 
 .bg-blue {
@@ -17559,6 +17587,10 @@ ul > p {
 
 .bg-gray {
   background-color: #F3F5F9;
+}
+
+.bg-black {
+  background-color: #223436;
 }
 
 .bg-dark {
@@ -17770,6 +17802,7 @@ select option[value=""] {
   width: 15px;
   background-color: #eee;
   border-radius: 50%;
+  border: 2px solid #01B59C;
 }
 
 /* On mouse-over, add a grey background color */
@@ -17801,8 +17834,8 @@ select option[value=""] {
 /* Style the indicator (dot/circle) */
 
 .input-container .checkmark:after {
-  top: 5px;
-  left: 5px;
+  top: 3px;
+  left: 3px;
   width: 5px;
   height: 5px;
   border-radius: 50%;
@@ -17815,23 +17848,70 @@ select option[value=""] {
 }
 
 .search .found {
-  width: 300px;
-  background-color: white;
-  box-shadow: 0px 0px 10px 1px #ccc;
+  width: 350px;
+  background-color: #F3F5F9;
   padding: 5px;
-  border-radius: 10px;
   max-height: 200px;
   overflow: auto;
   position: absolute;
-  z-index: 1;
+  z-index: 6;
+}
+
+.search .found::-webkit-scrollbar {
+  width: 3px;
+  background-color: #F3F5F9;
+  position: absolute;
+  right: 10px;
+}
+
+.search .found::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+
+.search .found::-webkit-scrollbar-thumb {
+  background-color: #01B59C;
 }
 
 .search .found .item {
   padding: 5px;
-  border-bottom: solid 1px rgba(0, 0, 0, 0.2);
   display: flex;
   justify-content: space-between;
   align-items: center;
+  font-size: 13px;
+  font-weight: bold;
+  text-transform: capitalize;
+  text-align: left;
+  color: black;
+}
+
+.search .found .item .profile-info {
+  display: flex;
+  align-items: center;
+}
+
+.search .found .item .profile-info .img-cont {
+  margin-right: 5px;
+}
+
+.search .found .item .profile-info a {
+  color: black;
+}
+
+.search .found .item .profile-info a:hover {
+  text-decoration: none;
+}
+
+.search .found .item button {
+  border: 2px solid #223436;
+  background-color: #223436;
+  color: white;
+  padding: 2px 6px;
+  transition: 0.2s;
+}
+
+.search .found .item button:hover {
+  background-color: white;
+  color: #223436;
 }
 
 .link-cont {
@@ -18027,9 +18107,27 @@ select option[value=""] {
   color: white !important;
 }
 
-.button-color-sector {
-  border: 2px solid #f6993f;
-  color: #f6993f;
+.button-color-white {
+  border: 2px solid white;
+  background-color: white;
+  color: #01B59C;
+}
+
+.button-color-white:hover {
+  transition: 0.2s;
+  color: white;
+  background-color: transparent;
+}
+
+.button-color-transparent {
+  border: 2px solid white;
+  background-color: transparent;
+  color: white;
+}
+
+.button-color-transparent:hover {
+  transition: 0.2s;
+  color: #01B59C;
   background-color: white;
 }
 
@@ -18067,6 +18165,18 @@ select option[value=""] {
   transition: 0.2s;
   color: #00A1DC;
   background-color: #E5F5FC;
+}
+
+.button-color-black {
+  border: 2px solid #223436;
+  background-color: #223436;
+  color: white;
+}
+
+.button-color-black:hover {
+  transition: 0.2s;
+  color: #223436;
+  background-color: white;
 }
 
 .button-color-red {
@@ -18149,6 +18259,35 @@ select option[value=""] {
   border: 3px solid #01B59C;
 }
 
+.button-scroll {
+  position: fixed;
+  background-color: #223436;
+  border: 2px solid #223436;
+  border-radius: 50%;
+  color: white;
+  width: 50px;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  right: 20px;
+  bottom: 20px;
+  transition: 0.2s;
+}
+
+.button-scroll img {
+  filter: brightness(0) invert(1);
+}
+
+.button-scroll:hover {
+  background-color: white;
+  color: #223436;
+}
+
+.button-scroll:hover img {
+  filter: brightness(0) invert(0);
+}
+
 .bubble-cont {
   position: relative;
 }
@@ -18193,6 +18332,19 @@ select option[value=""] {
 }
 
 .button-style:hover {
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.button-style-radius {
+  display: inline-block;
+  padding: 5px 45px 5px 45px;
+  border-radius: 20px;
+  transition: 0.2s;
+  font-weight: bold;
+}
+
+.button-style-radius:hover {
   text-decoration: none;
   cursor: pointer;
 }
@@ -18305,6 +18457,95 @@ select option[value=""] {
 .switch-button-container .switch-button .knobs,
 .switch-button-container .switch-button .knobs:before,
 .switch-button-container .switch-button .layer {
+  transition: 0.3s ease all;
+}
+
+.switch-button-on-off {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.switch-button-on-off .knobs,
+.switch-button-on-off .layer {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+}
+
+.switch-button-on-off .button {
+  display: inline-block;
+  position: relative;
+  top: 50%;
+  width: 74px;
+  height: 31px;
+  overflow: hidden;
+}
+
+.switch-button-on-off .button.r,
+.switch-button-on-off .button.r .layer {
+  border-radius: 100px;
+}
+
+.switch-button-on-off .button.b2 {
+  border-radius: 2px;
+}
+
+.switch-button-on-off .checkbox {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  padding: 0;
+  margin: 0;
+  opacity: 0;
+  cursor: pointer;
+  z-index: 3;
+}
+
+.switch-button-on-off .knobs {
+  z-index: 2;
+}
+
+.switch-button-on-off .layer {
+  width: 100%;
+  background-color: #fcebeb;
+  transition: 0.3s ease all;
+  z-index: 1;
+}
+
+.switch-button-on-off .switch-button .knobs:before {
+  content: "";
+  position: absolute;
+  top: 2px;
+  left: 45px;
+  width: 27px;
+  height: 27px;
+  color: #fff;
+  font-size: 10px;
+  font-weight: bold;
+  text-align: center;
+  line-height: 1;
+  padding: 9px 4px;
+  background-color: lightgreen;
+  border-radius: 50%;
+  transition: 0.3s cubic-bezier(0.18, 0.89, 0.35, 1.15) all;
+}
+
+.switch-button-on-off .switch-button .checkbox:checked + .knobs:before {
+  content: "";
+  left: 2px;
+  background-color: #ffcccb;
+}
+
+.switch-button-on-off .switch-button .checkbox:checked ~ .layer {
+  background-color: #ebf7fc;
+}
+
+.switch-button-on-off .switch-button .knobs,
+.switch-button-on-off .switch-button .knobs:before,
+.switch-button-on-off .switch-button .layer {
   transition: 0.3s ease all;
 }
 
@@ -18508,12 +18749,6 @@ select option[value=""] {
   padding-top: 20px;
 }
 
-.item-cont .item-style-visible {
-  box-shadow: 0px 0px 10px 1px #ccc;
-  padding: 30px;
-  background-color: white;
-}
-
 .item-cont .item-style {
   width: 100%;
   height: 100%;
@@ -18559,7 +18794,7 @@ select option[value=""] {
   width: 350px;
   opacity: 0;
   z-index: 10;
-  background-color: #0AB89F;
+  background-color: #01B59C;
   color: white;
   padding: 5px;
   position: absolute;
@@ -18651,13 +18886,12 @@ select option[value=""] {
   height: 120px;
 }
 
-.hover-scale {
+.scale-nocursor {
   transition: 0.2s;
 }
 
-.hover-scale:hover {
+.scale-nocursor:hover {
   transform: scale(1.2);
-  cursor: pointer;
 }
 
 .anim-load-cont .anim-item {
@@ -19146,6 +19380,11 @@ select option[value=""] {
   color: #00A1DC;
 }
 
+.card-color-gray {
+  background-color: #F3F5F9;
+  color: black;
+}
+
 .r-90l {
   transition: 0.2s;
   transform: rotate(-90deg);
@@ -19351,35 +19590,41 @@ select option[value=""] {
   width: 300px;
   left: 50%;
   z-index: 1;
-  padding: 20px 5px;
-  top: 35px;
+  padding: 20px 0px;
+  top: 15px !important;
   background-color: white;
   border-radius: 20px;
-  background-color: #224143;
   text-align: center;
   color: white;
 }
 
 #nav-bar .notification .show-notf-preview .notf a {
-  border-radius: 5px;
-  background-color: white;
   text-align: left;
   display: inline-block;
   width: 100%;
-  background-color: rgba(10, 184, 159, 0.7);
+  background-color: #80DACD;
   text-decoration: none;
   color: black;
   margin-top: 3px;
-  padding: 10px;
+  padding: 0px 10px;
+  height: 40px;
+  line-height: 1.2;
+  font-size: 13px;
+  display: flex;
+  align-items: center;
 }
 
 #nav-bar .notification .show-notf-preview .notf a:hover {
-  background-color: #0AB89F;
+  background-color: #01B59C;
   color: white;
 }
 
 #nav-bar .notification .show-notf-preview .v-notf {
-  padding: 5px 0;
+  padding-top: 5px;
+}
+
+#nav-bar .notification .show-notf-preview .v-notf a {
+  padding: 0px;
 }
 
 #nav-bar .notification .show-notf-preview .v-notf a:hover {
@@ -19458,190 +19703,282 @@ footer .bottom-footer {
 }
 
 #guest-home {
-  position: relative;
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  justify-content: space-around;
+  background-color: #01B59C;
+  background: linear-gradient(0deg, #01B59C 0%, #00A1DC 50%, #01B59C 100%);
 }
 
-#guest-home .logo-cont {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-#guest-home .logo-cont .logo {
-  width: 100%;
-  height: auto;
-  -o-object-fit: fill;
-     object-fit: fill;
-}
-
-#guest-home .logo-cont .beta {
-  position: absolute;
-  top: 0px;
-  right: 0px;
+#guest-home h1 {
   font-weight: bold;
-}
-
-#guest-home .preview .intro {
-  text-align: center;
   color: white;
-  padding-top: 75px;
-  padding-bottom: 50px;
-  color: #224143;
+  font-size: 40px;
+  line-height: 1;
 }
 
-#guest-home .preview .intro h3 {
-  padding: 15px 0;
-}
-
-#guest-home .preview .intro .home-img {
-  width: 100%;
-  height: auto;
-}
-
-#guest-home .preview .code-ver {
-  padding: 75px 0;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-#guest-home .preview .code-ver .form-group {
-  display: flex;
-  justify-content: space-around;
-  margin-top: 20px;
-}
-
-#guest-home .preview .code-ver .form-group div {
-  margin-right: 5px;
-}
-
-#guest-home .preview .login-register-cont {
-  padding: 75px 0px;
-}
-
-#guest-home .preview .login-register-cont .switch {
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-end;
-}
-
-#guest-home .preview .login-register-cont .switch button {
-  width: 50%;
-  height: 35px;
-  border: none;
-  border-radius: 10px 10px 0px 0px;
-  font-size: 20px;
-  background-color: #0AB89F;
-  color: white;
-  font-weight: bold;
-}
-
-#guest-home .preview .login-register-cont .switch .selected {
-  height: 50px;
-  background-color: white;
+#guest-home h4 {
   color: black;
-  border-bottom: none;
+  font-size: 20px;
+  line-height: 1.4;
 }
 
-#guest-home .preview .login-register-cont .log-reg {
-  background-color: white;
-  min-height: 400px;
-  padding: 5px 20px;
-  box-shadow: 0px 0px 10px 1px #ccc;
-  border-radius: 0px 0px 10px 10px;
+#guest-home p {
+  font-size: 15px;
+}
+
+#guest-home .iscriviti-ora {
+  text-transform: uppercase;
+  width: 250px;
+  height: 80px;
+  border-radius: 40px;
+  font-size: 27px;
+  font-weight: bold;
+  border: 4px solid white;
+  display: inline-block;
   display: flex;
+  align-items: center;
   justify-content: center;
+}
+
+#guest-home .iscriviti-ora:hover {
+  text-decoration: none;
+}
+
+#guest-home .step-cont {
+  display: flex;
+  justify-content: flex-start;
+}
+
+#guest-home .step-cont .step .step-circle {
+  height: 80px;
+  width: 80px;
+  border-radius: 50%;
+  border: 6px solid white;
+  margin: 0 auto;
+  transition: 0.5s;
+}
+
+#guest-home .step-cont .step .step-circle:hover {
+  background-color: white;
+}
+
+#guest-home .step-cont .step .step-line {
+  height: 40px;
+  width: 6px;
+  background-color: white;
+  margin: 0 auto;
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
+
+#guest-home .step-cont .step-text {
+  padding-left: 25px;
+  padding-top: 7px;
+}
+
+#guest-home .step-cont .step-text h5 {
+  font-weight: bold;
+  color: white;
+}
+
+#guest-home .step-cont .step-text p {
+  color: white;
+}
+
+#guest-home .step-cont:last-child .step .step-line {
+  display: none;
+}
+
+#guest-home .roadmap-item {
+  display: flex;
+  justify-content: flex-start;
   align-items: center;
 }
 
-#guest-home .preview .login-register-cont .log-reg form {
-  width: 100%;
+#guest-home .roadmap-item:last-child .roadmap-img .roadmap-line {
+  display: none;
 }
 
-#guest-home .preview .login-register-cont .password {
+#guest-home .roadmap-item .roadmap-img {
   position: relative;
 }
 
-#guest-home .preview .login-register-cont .password button {
+#guest-home .roadmap-item .roadmap-img img {
+  width: 120px;
+  height: 200px;
+  -o-object-fit: contain;
+     object-fit: contain;
+  z-index: 2;
+  -o-object-position: -11px 0px;
+     object-position: -11px 0px;
+}
+
+#guest-home .roadmap-item .roadmap-text {
+  padding-left: 20px;
+}
+
+#guest-home .roadmap-item .roadmap-text .title-cont h5 {
+  font-weight: bold;
+}
+
+#guest-home .roadmap-item .roadmap-text .title-cont span {
+  display: inline-block;
+  width: 100px;
+  height: 2px;
+  margin-left: 20px;
+}
+
+#guest-home .roadmap-item .roadmap-text p {
+  max-width: 385px;
+  padding-top: 10px;
+  padding-left: 20px;
+  color: white;
+  font-weight: bold;
+}
+
+#guest-home .screenshot .text-container {
+  min-height: 250px;
+  padding: 25px;
+}
+
+#guest-home .screenshot .text-container h1 {
+  padding: 0px;
+}
+
+#guest-home .screenshot .image-container {
+  min-height: 250px;
+  position: relative;
+}
+
+#guest-home .screenshot .image-container img {
+  height: 100%;
+  width: 100%;
+}
+
+#guest-home .partner .partner-cont {
+  background-color: white;
+}
+
+#guest-home .partner .partner-cont img {
+  width: 300px;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+
+#guest-home .reviews .card-slider-review .MultiCarousel {
+  float: left;
+  overflow: hidden;
+  padding: 80px;
+  width: 100%;
+  position: relative;
+}
+
+#guest-home .reviews .card-slider-review .MultiCarousel .MultiCarousel-inner {
+  transition: 1s ease all;
+  float: left;
+}
+
+#guest-home .reviews .card-slider-review .MultiCarousel .MultiCarousel-inner .item {
+  float: left;
+  padding: 25px;
+}
+
+#guest-home .reviews .card-slider-review .MultiCarousel .MultiCarousel-inner .item .pad15 {
+  height: 460px;
+  padding: 40px;
+  background: rgba(255, 255, 255, 0.5);
+  border-radius: 40px;
+  margin: 10px;
+}
+
+#guest-home .reviews .card-slider-review .MultiCarousel .MultiCarousel-inner .item .pad15 .info-container .image-container {
+  margin: 0 auto;
+  margin-bottom: 40px;
+  background-color: white;
+  border-radius: 50%;
+  width: 80px;
+  height: 80px;
+}
+
+#guest-home .reviews .card-slider-review .MultiCarousel .MultiCarousel-inner .item .pad15 .info-container .image-container img {
+  width: 100%;
+  height: 100%;
+}
+
+#guest-home .reviews .card-slider-review .MultiCarousel .MultiCarousel-inner .item .pad15 .info-container .text-container .main-text {
+  height: 240px;
+}
+
+#guest-home .reviews .card-slider-review .MultiCarousel .MultiCarousel-inner .item .pad15 .info-container .text-container p {
+  text-align: center;
+  color: black;
+  font-size: 16px;
+  font-weight: bold;
+}
+
+#guest-home .reviews .card-slider-review .MultiCarousel .leftLst,
+#guest-home .reviews .card-slider-review .MultiCarousel .rightLst {
+  width: 45px;
+  height: 460px;
   position: absolute;
   top: 50%;
+  transform: translateY(-50%);
+  cursor: pointer;
+  background-color: transparent;
+}
+
+#guest-home .reviews .card-slider-review .MultiCarousel .leftLst:focus,
+#guest-home .reviews .card-slider-review .MultiCarousel .rightLst:focus {
+  outline: none;
+  box-shadow: none;
+}
+
+#guest-home .reviews .card-slider-review .MultiCarousel .leftLst {
+  left: 0px;
+}
+
+#guest-home .reviews .card-slider-review .MultiCarousel .rightLst {
   right: 0px;
-  transform: translate(-150%, -50%);
-  color: gray;
 }
 
-#guest-home .landing {
-  width: 100%;
+#guest-home .reviews .card-slider-review .MultiCarousel .leftLst.over,
+#guest-home .reviews .card-slider-review .MultiCarousel .rightLst.over {
+  display: none;
 }
 
-#guest-home .landing h2 {
-  margin-bottom: 30px;
-}
+@media (min-width: 768px) {
+  #guest-home h1 {
+    font-size: 65px;
+  }
 
-#guest-home .landing .item-style {
-  min-height: 250px;
-  display: flex;
-  justify-content: space-between;
-  flex-direction: column;
-  transition: 0.2s;
-}
+  #guest-home h4 {
+    font-size: 35px;
+  }
 
-#guest-home .landing .item-style:hover {
-  transform: scale(1.01);
-}
+  #guest-home h5 {
+    font-size: 25px;
+  }
 
-#guest-home .landing .item-style img {
-  height: 50%;
-  border-top-left-radius: 10px;
-  border-top-right-radius: 10px;
-}
+  #guest-home p {
+    font-size: 20px;
+  }
 
-#guest-home .landing .item-style .card-info {
-  height: 100%;
-  padding: 10px;
-  color: #555;
-}
+  #guest-home .roadmap-item .roadmap-img img {
+    width: 200px;
+  }
 
-#guest-home .landing .item-style .card-info h2 {
-  margin-bottom: 15px;
-}
+  #guest-home .roadmap-item .roadmap-text {
+    padding-left: 50px;
+  }
 
-#guest-home .landing .item-style .card-info p {
-  margin: 0px;
-}
+  #guest-home .roadmap-item .roadmap-text .title-cont span {
+    margin-left: 50px;
+  }
 
-#guest-home .landing .gray-blue-bg {
-  background-color: #e7eaf3;
-}
+  #guest-home .roadmap-item .roadmap-text p {
+    padding-left: 50px;
+  }
 
-#guest-home .landing img {
-  height: 333px;
-  -o-object-fit: cover;
-     object-fit: cover;
-}
-
-#guest-home .landing .text-cont {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-#guest-home .landing .text-cont p {
-  font-size: 20px;
-}
-
-#guest-home .stats {
-  width: 100%;
-}
-
-@media (min-width: 992px) {
-  #guest-home .preview .intro {
-    padding-right: 50px;
+  #guest-home .screenshot .text-container {
+    padding: 100px;
   }
 }
 
@@ -20028,7 +20365,7 @@ footer .bottom-footer {
 #search .create-profile .item:hover {
   transition: 0.4s;
   background-color: white;
-  color: #01B59C;
+  color: #223436;
 }
 
 #search .new-subscribers .item-cont .item-style {
